# TaskMaster

./: .clang-format  .gitignore  CMakeLists.txt  README.md  taskconfig.yaml  tastconfig.yaml
libs/ipc/: CMakeLists.txt
libs/ipc/include/: Address.hpp  FileDescriptor.hpp  ProtoReader.hpp  ProtoWriter.hpp  Socket.hpp
libs/ipc/proto/: taskmaster.proto
libs/ipc/src/: Address.cpp  FileDescriptor.cpp  Socket.cpp
libs/logger/: CMakeLists.txt
libs/logger/include/: Logger.hpp  utils.hpp
libs/logger/src/: Logger.cpp
libs/proto/: CMakeLists.txt
libs/proto/src/: taskmaster.proto
libs/utils/: CMakeLists.txt
libs/utils/include/: utils.hpp
libs/utils/src/: utils.cpp
taskmasterctl/: CMakeLists.txt
taskmasterctl/include/cli/: UserInput.hpp
taskmasterctl/include/ipc/: CheckSocketState.hpp  Client.hpp
taskmasterctl/src/: client_test.cpp  main.cpp
taskmasterctl/src/cli/: UserInput.cpp  userInput.cpp
taskmasterctl/src/ipc/: CheckSocketState.cpp  Client.cpp
taskmasterd/: CMakeLists.txt
taskmasterd/include/: job.hpp
taskmasterd/include/core/: Address.hpp  EventHandler.hpp  EventManager.hpp  FileDescriptor.hpp  Globals.hpp  Socket.hpp  Timer.hpp
taskmasterd/include/ipc/: Client.hpp  ProtoReader.hpp  Server.hpp
taskmasterd/include/jobs/: Job.hpp  JobConfig.hpp  JobManager.hpp  Process.hpp  Signal.hpp  jobConfig.hpp
taskmasterd/src/: example.cpp  job.cpp  main.cpp
taskmasterd/src/core/: Address.cpp  EventHandler.cpp  EventManager.cpp  FileDescriptor.cpp  Socket.cpp  Timer.cpp
taskmasterd/src/ipc/: Client.cpp  Server.cpp
taskmasterd/src/jobs/: Job.cpp  JobConfig.cpp  JobManager.cpp  Process.cpp  Signal.cpp  jobConfig.cpp
testing/cat/: test
testing/nginx/: nginx.conf
